# chamber

./: Cargo.toml  Chambers - Paper v2.md  README.md
benchmarks/results/: raw_20260403_130038.jsonl  raw_20260403_180329.jsonl  raw_20260405_052000.jsonl  report_20260403_180329.json  report_20260404_204824.json  report_20260405_052000.json
crates/chambers-adapter/: Cargo.toml
crates/chambers-adapter/src/: handlers.rs  main.rs  state.rs
crates/chambers-adapter/tests/: security_audit.rs
crates/chambers-app/: Cargo.toml
crates/chambers-app/src/: ipc.rs  main.rs  ui_chamber.rs  ui_lobby.rs
crates/chambers-audit/: Cargo.toml
crates/chambers-audit/src/: lib.rs
crates/chambers-benchmark/: Cargo.toml
crates/chambers-benchmark/src/: chambers_runner.rs  comprehension.rs  hypothesis.rs  lib.rs  main.rs  metrics.rs  microvm_baseline.rs  task.rs  vm_baseline.rs
crates/chambers-benchmark/tests/: benchmark_integration.rs  h2_automated.rs
crates/chambers-burn/: Cargo.toml
crates/chambers-burn/src/: lib.rs
crates/chambers-capability/: Cargo.toml
crates/chambers-capability/src/: lib.rs
crates/chambers-cli/: Cargo.toml
crates/chambers-cli/src/: main.rs
crates/chambers-crypto/: Cargo.toml
crates/chambers-crypto/src/: encrypted_store.rs  lib.rs  mem_protect.rs
crates/chambers-interpreter/: Cargo.toml
crates/chambers-interpreter/src/: lib.rs
crates/chambers-object/: Cargo.toml
crates/chambers-object/src/: lib.rs
crates/chambers-operation/: Cargo.toml
crates/chambers-operation/src/: lib.rs
crates/chambers-orchestrator/: Cargo.toml
crates/chambers-orchestrator/src/: lib.rs
crates/chambers-policy/: Cargo.toml
crates/chambers-policy/src/: lib.rs
crates/chambers-runtime/: Cargo.toml
crates/chambers-runtime/src/: grammar_loader.rs  lib.rs
crates/chambers-runtime/tests/: burn_tests.rs  determinism.rs  e2e_decision_chamber.rs  encrypted_store_tests.rs  grammar_semantics.rs  orchestrator_e2e.rs
crates/chambers-state/: Cargo.toml
crates/chambers-state/src/: lib.rs
crates/chambers-types/: Cargo.toml
crates/chambers-types/src/: artifact.rs  capability.rs  error.rs  grammar.rs  lib.rs  object.rs  primitive.rs  world.rs
crates/chambers-vault/: Cargo.toml
crates/chambers-vault/src/: lib.rs
crates/chambers-view/: Cargo.toml
crates/chambers-view/src/: lib.rs
crates/chambers-world/: Cargo.toml
crates/chambers-world/src/: lib.rs
docs/: Level1_Chambers_IssueList.md  Level1_Chambers_PRD.md  PRD.md  PRD_Chambers_Isolation_Phases.md  Phase2_IssueList.md  audit-leakage-review.md  chambers_phase0_synthesized_issue_list.md  competitive-analysis.md  dma-mitigations.md  empirical-test-results.md  final-validation-report.md  formal-mapping.md  level1-architecture.md  phase2-empirical-results.md  real-baseline-results.md  security-assumptions.md  storage-reality-check.md
docs/adr/: 001-world-first-architecture.md  002-trusted-substrate-assumption.md  003-closed-primitive-algebra.md  004-cryptographic-erasure-as-primary-burn.md  005-no-import-export-in-phase0.md  006-one-reference-chamber-only.md  007-ui-subordinate-to-substrate.md
grammars/: decision_chamber.json
ui/: index.html
