[package]
name = "chambers-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chambers"
path = "src/main.rs"

[dependencies]
chambers-types = { workspace = true }
chambers-runtime = { workspace = true }
chambers-orchestrator = { workspace = true }
chambers-operation = { workspace = true }
serde_json = { workspace = true }
