[package]
name = "chambers-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
chambers-types = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
