[package]
name = "chambers-interpreter"
version.workspace = true
edition.workspace = true

[dependencies]
chambers-types = { workspace = true }
chambers-state = { workspace = true }
chambers-policy = { workspace = true }
chambers-capability = { workspace = true }
chambers-operation = { workspace = true }
chambers-audit = { workspace = true }
thiserror = { workspace = true }
