[package]
name = "chambers-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
chambers-types = { workspace = true }
chambers-crypto = { workspace = true }
chambers-world = { workspace = true }
chambers-object = { workspace = true }
chambers-policy = { workspace = true }
chambers-capability = { workspace = true }
chambers-state = { workspace = true }
chambers-operation = { workspace = true }
chambers-interpreter = { workspace = true }
chambers-burn = { workspace = true }
chambers-vault = { workspace = true }
chambers-audit = { workspace = true }
chambers-view = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
chambers-orchestrator = { workspace = true }
chambers-operation = { workspace = true }
chambers-crypto = { workspace = true }
chrono = { workspace = true }
