[package]
name = "chambers-state"
version.workspace = true
edition.workspace = true

[dependencies]
chambers-types = { workspace = true }
chambers-crypto = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
