[package]
name = "chambers-view"
version.workspace = true
edition.workspace = true

[dependencies]
chambers-types = { workspace = true }
chambers-state = { workspace = true }
chambers-vault = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
