[package]
name = "chambers-world"
version.workspace = true
edition.workspace = true

[dependencies]
chambers-types = { workspace = true }
chambers-crypto = { workspace = true }
chambers-audit = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
